Enhance styles using definition lists

--- a/04.Rmd
+++ b/04.Rmd
@@ -93,31 +93,28 @@
 * 搜索自己导师的研究成果——令人吃惊的是，尽管其导师的研究成果可能是该领域内最有价值的参考资料，很少有学生会这样做；
 * 允许自己导师有人性化的一面——包容他身上的弱点与不足，充分利用导师身上的优势与强势。
 
-**学生应该做的事情**
+学生应该做的事情
+:   导师与学生的关系是双向的，学生也应该主动学习，而不是被动地等待导师解答所有的问题。
 
-导师与学生的关系是双向的，学生也应该主动学习，而不是被动地等待导师解答所有的问题。
+    在最高的学术层面上，你应该积极主动地自己发现问题，积极主动地产生新想法。你的博士学位论文进展是否正常，有两个标志：标志之一在于你一直在发现新想法，这些想法是你导师以前所不知道或没有听说过的；另外一个标志就是导师发现你所有想法中至少有一个非常有意思，而且值得拿来进行研究讨论。将你的发现写成提纲交给导师阅读，然后如果导师希望了解更多细节的话，你应该提供相关资料的全文，这样做不但很有帮助，而且对导师来说也显得很有礼貌。
 
-在最高的学术层面上，你应该积极主动地自己发现问题，积极主动地产生新想法。你的博士学位论文进展是否正常，有两个标志：标志之一在于你一直在发现新想法，这些想法是你导师以前所不知道或没有听说过的；另外一个标志就是导师发现你所有想法中至少有一个非常有意思，而且值得拿来进行研究讨论。将你的发现写成提纲交给导师阅读，然后如果导师希望了解更多细节的话，你应该提供相关资料的全文，这样做不但很有帮助，而且对导师来说也显得很有礼貌。
+    在研究方法的层面上，你应该就具体的研究问题提出自己的想法，并且采用具体的研究方法来进行研究。在攻读博士学位的过程中，你需要一直坚持这样做，做得越多，你学到的东西也就越多。针对这些想法，导师很有可能会提出反对意见，你需要做的就是找出导师提出这些意见的理由，并且仔细斟酌，而不要躲进一个角落里生气懊恼。一位优秀的导师在其自身研究中，新的观念也会层出不穷，但是同时也会由于各种原因抛弃其中的大部分。现在你还只是一个学徒，要学会接受意见，改进研究方法。
 
-在研究方法的层面上，你应该就具体的研究问题提出自己的想法，并且采用具体的研究方法来进行研究。在攻读博士学位的过程中，你需要一直坚持这样做，做得越多，你学到的东西也就越多。针对这些想法，导师很有可能会提出反对意见，你需要做的就是找出导师提出这些意见的理由，并且仔细斟酌，而不要躲进一个角落里生气懊恼。一位优秀的导师在其自身研究中，新的观念也会层出不穷，但是同时也会由于各种原因抛弃其中的大部分。现在你还只是一个学徒，要学会接受意见，改进研究方法。
+学生的正当请求
+:   在攻读博士学位的各个阶段，学生可以提出很多不同的请求，但在提出请求时你要注意礼貌问题。
 
-**学生的正当请求**
+    从早期阶段开始，你就应该要求与你当时程度相适应的培训，培训项目应该是与你研究相关的研究方法，也可以是其他对你有帮助的领域，比如说很多学生都受益于自信心增强训练与放松训练，或者一些技能训练，如时间安排或其他辅助技能训练。如果需要用到专门的技巧，你可以向导师咨询（例如：会议文件的具体格式是什么？如何阅读一篇论文？如何在阅读时做笔记？）如果导师能够通过具体例子给你讲解，而不是只告诉你如何去做，那么这样将会非常有帮助。很多学生都不好意思向导师询问这些问题，因为他们认为自己应该知道这些事情。这种想法是不正确的。博士学位的意义就在于学习这些技能——如果你已经了解了这些的话，那么攻读博士学位也就没有什么意义了。
 
-在攻读博士学位的各个阶段，学生可以提出很多不同的请求，但在提出请求时你要注意礼貌问题。
+    到了后来的阶段，与导师讨论自己的发现的时候，你可以请导师推荐其他能够帮忙的专业人土，或者请导师介绍你们认识。这方面的请求要慎重。导师一般不可能介绍你认识一些会窃取你的想法并将其发表的人士（这是很多博士生没有根据的想象而已），但是你需要对学术界的礼节有足够的了解，这样才能够有礼貌地处理相应的情况。
 
-从早期阶段开始，你就应该要求与你当时程度相适应的培训，培训项目应该是与你研究相关的研究方法，也可以是其他对你有帮助的领域，比如说很多学生都受益于自信心增强训练与放松训练，或者一些技能训练，如时间安排或其他辅助技能训练。如果需要用到专门的技巧，你可以向导师咨询（例如：会议文件的具体格式是什么？如何阅读一篇论文？如何在阅读时做笔记？）如果导师能够通过具体例子给你讲解，而不是只告诉你如何去做，那么这样将会非常有帮助。很多学生都不好意思向导师询问这些问题，因为他们认为自己应该知道这些事情。这种想法是不正确的。博士学位的意义就在于学习这些技能——如果你已经了解了这些的话，那么攻读博士学位也就没有什么意义了。
+学生需要向导师汇报的事情
+:   你应该向导师汇报以下事情：
 
-到了后来的阶段，与导师讨论自己的发现的时候，你可以请导师推荐其他能够帮忙的专业人土，或者请导师介绍你们认识。这方面的请求要慎重。导师一般不可能介绍你认识一些会窃取你的想法并将其发表的人士（这是很多博士生没有根据的想象而已），但是你需要对学术界的礼节有足够的了解，这样才能够有礼貌地处理相应的情况。
-
-**学生需要向导师汇报的事情**
-
-你应该向导师汇报以下事情：
-
-* 你的工作状态；
-* 你感兴趣的事情与你关注的事情；
-* 外界观点：准确及时地向导师报告你从与他人谈话和他人论文中获取的反馈信息；指出具体的赞扬与批评；
-* 决议与转折点（导师具有敏锐的洞察力，能够先发制人，制止你做出草率的错误决定，这点对你大有裨益）；
-* 生活环境：告诉导师影响你工作的个人或实际事情，最好是在这些事情还没有成为主要问题之前就要告诉他们。
+    * 你的工作状态；
+    * 你感兴趣的事情与你关注的事情；
+    * 外界观点：准确及时地向导师报告你从与他人谈话和他人论文中获取的反馈信息；指出具体的赞扬与批评；
+    * 决议与转折点（导师具有敏锐的洞察力，能够先发制人，制止你做出草率的错误决定，这点对你大有裨益）；
+    * 生活环境：告诉导师影响你工作的个人或实际事情，最好是在这些事情还没有成为主要问题之前就要告诉他们。
 
 ### 你能够自己做的事情
 
@@ -151,41 +148,41 @@
 ### 可以接受的导师
 
 流水线管理人
-: 根据一个“模子”批量生产博士研究生；指导学生做自己控制范围之内的课题，这些课题一般附属于导师自己的项目，由国家资金支持；通常管理学生就像是管理一个帝国一样，独裁专制；一旦发现你碍手碍脚，他们很有可能与你断绝往来；不会关心你做的博士课题是否适合你的长远规划。
+:   根据一个“模子”批量生产博士研究生；指导学生做自己控制范围之内的课题，这些课题一般附属于导师自己的项目，由国家资金支持；通常管理学生就像是管理一个帝国一样，独裁专制；一旦发现你碍手碍脚，他们很有可能与你断绝往来；不会关心你做的博士课题是否适合你的长远规划。
 
 哥们类型的导师
-: 尽量在酒吧做指导工作；花很大力气讨论有趣但不相关的话题；对你的私人生活了如指掌。这样的指导可能听起来很有意思，但是这类导师可能无法给你提供所需的信息，却因为过于干涉你的生活让你很不自在。
+:   尽量在酒吧做指导工作；花很大力气讨论有趣但不相关的话题；对你的私人生活了如指掌。这样的指导可能听起来很有意思，但是这类导师可能无法给你提供所需的信息，却因为过于干涉你的生活让你很不自在。
 
 正式传统类型的导师
-: 严厉、正式、严格按照规定办事；可以教你学会做事情的正式、正确的方法，这样对你有益处。但是也有其不利的一面：不管自己投人多少，任何时候都要求把自己的名字写入论文中；一般不希望与你讨论任何研究以外的题目；对学生都是一副高高在上、故意屈尊的姿态。
+:   严厉、正式、严格按照规定办事；可以教你学会做事情的正式、正确的方法，这样对你有益处。但是也有其不利的一面：不管自己投人多少，任何时候都要求把自己的名字写入论文中；一般不希望与你讨论任何研究以外的题目；对学生都是一副高高在上、故意屈尊的姿态。
 
 “缺席”导师
-: 这些导师很难联系上，他们对自己的工作过于尽职尽责，但是有时候却在想方设法地躲避你。面对这种情况，你需要弄清楚他们属于哪种类型——责任感过于强烈的人可能是非常优秀的导师，前提是你需要“逮到”他们（因为他们表现很好，所以可能就会被分配很多事情来做，并且承担各种责任，这样他们就显得过于尽职尽责了）；想方设法来避开你的人可能也帮不了你什么。
+:   这些导师很难联系上，他们对自己的工作过于尽职尽责，但是有时候却在想方设法地躲避你。面对这种情况，你需要弄清楚他们属于哪种类型——责任感过于强烈的人可能是非常优秀的导师，前提是你需要“逮到”他们（因为他们表现很好，所以可能就会被分配很多事情来做，并且承担各种责任，这样他们就显得过于尽职尽责了）；想方设法来避开你的人可能也帮不了你什么。
 
 类似于校长角色的导师
-: 布置作业，严格地指导，非常清楚事情应该怎么做（第一年可能会为你打好基础，但是在以后的几年内可能不会给你足够的成长空间）。
+:   布置作业，严格地指导，非常清楚事情应该怎么做（第一年可能会为你打好基础，但是在以后的几年内可能不会给你足够的成长空间）。
 
 新手
-: 你可能成为你导师的第一位学生。这并不意味着你就不能通过考试，也不意味着导师就没有任何用处。通常情况下，这些新手会与其学生结成一个团队，所以最后你和导师的关系不会仅仅停留在师生关系层面上。新手导师非常尽职尽责，非常热心，因为他们也想把工作做好，但是他们可能不像有经验的导师懂得那么多策略、那么多专业知识。
+:   你可能成为你导师的第一位学生。这并不意味着你就不能通过考试，也不意味着导师就没有任何用处。通常情况下，这些新手会与其学生结成一个团队，所以最后你和导师的关系不会仅仅停留在师生关系层面上。新手导师非常尽职尽责，非常热心，因为他们也想把工作做好，但是他们可能不像有经验的导师懂得那么多策略、那么多专业知识。
 
 无足轻重的导师
-: 他们既不是造诣极深的研究学者，也不是渊博的思想家；可能也不是一位尽职尽责的导师；缺乏创造力可能不会妨碍他们识别优秀的想法，也不会不利于他们培养出优秀的学生。如果你的导师属于这种类型，尽力利用他们所有的技能。
+:   他们既不是造诣极深的研究学者，也不是渊博的思想家；可能也不是一位尽职尽责的导师；缺乏创造力可能不会妨碍他们识别优秀的想法，也不会不利于他们培养出优秀的学生。如果你的导师属于这种类型，尽力利用他们所有的技能。
 
 （在密室中进行研究的）科学家类型的导师
-: 他们喜欢技术细节与小技巧；知识非常渊博，但是对于整体则默然视之（不要沉迷于技术细节，在其他方面寻求一些策略性意见）。
+:   他们喜欢技术细节与小技巧；知识非常渊博，但是对于整体则默然视之（不要沉迷于技术细节，在其他方面寻求一些策略性意见）。
 
 粗枝大叶的导师
-: 他们本意不错，善良热心，知识渊博，尽职尽责，但是稍微有些笨拙，心不在焉或者迟钝。（他们忽视形式，只重内容。）
+:   他们本意不错，善良热心，知识渊博，尽职尽责，但是稍微有些笨拙，心不在焉或者迟钝。（他们忽视形式，只重内容。）
 
 禅宗般的导师
-: 这类导师通常通过软事、寓言与非常晦涩的引用给你一些含义模糊的意见；可能给你提供基础训练或细节，这种导师能够与很优秀的学生合作顺利，因为这类学生能够独立自主，能够了解不可思议表象后面真正的意图所在。
+:   这类导师通常通过软事、寓言与非常晦涩的引用给你一些含义模糊的意见；可能给你提供基础训练或细节，这种导师能够与很优秀的学生合作顺利，因为这类学生能够独立自主，能够了解不可思议表象后面真正的意图所在。
 
 ### 优秀的导师
 
 符合这个条件的导师只有一种：
 
 理想的学者
-: 他们是受人尊重的学者、经验丰富的导师，他们平易近人、通情达理；适当协调大体指导与特别辅导支持的比例。如果你的导师属于这种类型，你应该通过一定的方法明白表达你的感激与欣赏，你会从他们那里学到很多东西。
+:   他们是受人尊重的学者、经验丰富的导师，他们平易近人、通情达理；适当协调大体指导与特别辅导支持的比例。如果你的导师属于这种类型，你应该通过一定的方法明白表达你的感激与欣赏，你会从他们那里学到很多东西。
 
 大部分导师都是同时属于其中几个类型，一般是两个或两个以上，在不同的时候扮演不同的角色。在前两年内表现完美的导师可能不会一直支待你，到论文阶段他们可能不会指导你的博士论文。找出你的导师的强项，并且向他学习这些。区别判断出哪些导师有些不完美的地方，但这些不完美是人之常情，而哪些导师是真的误入歧途了。
 
