--- a/05.Rmd
+++ b/05.Rmd
@@ -36,23 +36,19 @@
 
 两种主要的、历史悠久的工具是奉承和贿赂。奉承就是要说好听的话；贿赂主要是借咖啡、巧克力饼干和帮助找到难找的参考书等实际好处的形式。（为了防止误解，有必要澄清一下，通过金钱和性行贿是不道德的，也是非法的，我们坚决反对这类做法。）
 
-**奉承**
+奉承
+:   有效奉承的秘诀是：它应该是坦率的、明确的、简洁的和准确的。也就是说，它应该从奉承者的口中自然而然地、不加掩饰地流出，并让被奉承者产生具体和准确的回应。不可以过分地奉承，说的好话也必须能在一定程度上反映现实。对某人新近出版物的一句有内容的、时机恰当的奉承胜过十句泛泛的、模糊的夸奖。同时，好的奉承不会被误认为是吸引异性的手段——有魅力的女研究员在各种会议上已经受够了这类不请自来的关注。
 
-有效奉承的秘诀是：它应该是坦率的、明确的、简洁的和准确的。也就是说，它应该从奉承者的口中自然而然地、不加掩饰地流出，并让被奉承者产生具体和准确的回应。不可以过分地奉承，说的好话也必须能在一定程度上反映现实。对某人新近出版物的一句有内容的、时机恰当的奉承胜过十句泛泛的、模糊的夸奖。同时，好的奉承不会被误认为是吸引异性的手段——有魅力的女研究员在各种会议上已经受够了这类不请自来的关注。
+咖啡
+:   名人也是人。在举行会议的场所，如果有片刻休息，请他们喝一杯好咖啡他们会很乐意的。请他们喝咖啡有很多好处。首先是可以借此得到一些非正式的建议——就业前景、组织政策，以及某个研究领域的未来。其次它也提供了一个在会场或类似场合放松的机会。在漫长的会议期间，请别人喝一杯高品质的咖啡可以被看做是一种真正的善意行为，尤其是当你做到考虑周到、说话礼貌的情况下。（比如如果对方想暂时从工作中解放出来，你就应该避免谈工作的话题。）
 
-**咖啡**
+巧克力饼干
+:   巧克力饼干真的是非常有效的“贿赂物”。如果你给某人现金作为成为你试验对象的酬劳，会有一定效果。但如果你给他们高档巧克力饼干和地道的咖啡，效果会更好。他们会变得更加合作，也会更加友好地与你交流。
 
-名人也是人。在举行会议的场所，如果有片刻休息，请他们喝一杯好咖啡他们会很乐意的。请他们喝咖啡有很多好处。首先是可以借此得到一些非正式的建议——就业前景、组织政策，以及某个研究领域的未来。其次它也提供了一个在会场或类似场合放松的机会。在漫长的会议期间，请别人喝一杯高品质的咖啡可以被看做是一种真正的善意行为，尤其是当你做到考虑周到、说话礼貌的情况下。（比如如果对方想暂时从工作中解放出来，你就应该避免谈工作的话题。）
+    很多人都不相信巧克力饼干的魔力，这倒不是什么坏事，因为如果每个人都采取这种方法，那就会使这一方法贬值，而精明的研究人员就不得不寻找另外一种激励方式了。
 
-**巧克力饼干**
-
-巧克力饼干真的是非常有效的“贿赂物”。如果你给某人现金作为成为你试验对象的酬劳，会有一定效果。但如果你给他们高档巧克力饼干和地道的咖啡，效果会更好。他们会变得更加合作，也会更加友好地与你交流。
-
-很多人都不相信巧克力饼干的魔力，这倒不是什么坏事，因为如果每个人都采取这种方法，那就会使这一方法贬值，而精明的研究人员就不得不寻找另外一种激励方式了。
-
-**互惠**
-
-人们很忙。你感兴趣的人往往更忙。要想从他们的宝贵时间里借出一点来，可以采用交换的形式为他们做一些有价值的事，他们会因此交换部分时间给你。举个例子来说，你可以帮助他们完成一些行政事务或图书馆藏查询，以交换他们半小时的时间和你共进咖啡，顺便讨论一些你感兴趣的问题（咖啡还是要由你买单）。
+互惠
+:   人们很忙。你感兴趣的人往往更忙。要想从他们的宝贵时间里借出一点来，可以采用交换的形式为他们做一些有价值的事，他们会因此交换部分时间给你。举个例子来说，你可以帮助他们完成一些行政事务或图书馆藏查询，以交换他们半小时的时间和你共进咖啡，顺便讨论一些你感兴趣的问题（咖啡还是要由你买单）。
 
 ### 第一次接触——本校的人
 
@@ -68,54 +64,48 @@
 
 在第一次接触之后应该准备一些材料供对方参考，比如一份篇幅为一页纸的研究概略，或是一份包含你研究发现的会议发言稿。一定要确保你寄过去的材料能很好地展现你的学术水平：确保书写清晰，没有错误，可以让你的导师或其他有经验的读者先检查一遍。
 
-**通过电话**
+通过电话
+:   通过电话联系的最佳条件是你已经对对方下了“诱饵”，比如某个对方认识的人已经向对方提起过你，或者你已经给对方发了邮件，并在邮件中告诉对方你将会打电话给他。在电话中你应该首先告诉对方你是谁，为什么要打电话，然后询问对方是否能抽出比如五分钟的时间听电话。通常对方的回答是否定的，所以要做好心理准备，选择另一个时间再打。还有，要在通话之后通过信件或电子邮件与对方保持联络。
 
-通过电话联系的最佳条件是你已经对对方下了“诱饵”，比如某个对方认识的人已经向对方提起过你，或者你已经给对方发了邮件，并在邮件中告诉对方你将会打电话给他。在电话中你应该首先告诉对方你是谁，为什么要打电话，然后询问对方是否能抽出比如五分钟的时间听电话。通常对方的回答是否定的，所以要做好心理准备，选择另一个时间再打。还有，要在通话之后通过信件或电子邮件与对方保持联络。
+通过信件或电子邮件
+:   那些出版了著作的研究人员，尤其是一些有名的学者，总是会收到许多想要找他们帮忙的学生的来信。如果信写得无聊没有内容，比如“亲爱的哈根（Haagen）教授，我是一名在布达佩斯（Budapest）的研究生，正在做关于冰淇淋的研究，我希望在选课题方面得到您的指点。”这类信件只会显出学生的无能，研究人员会认为这样的学生不值得搭理。相反，如果学生能够简明地概括自己研究的主要信息，并提出具体的问题，那么信就会变得有趣得多。研究人员往往会答复此类信件（虽然可能无法立即答复）。研究人员需要抽时间读信，考虑其内容，决定是否及如何答复。又因为其他工作而不得不把回信的事搁在一边，这样一来，可能等上6个月才有机会给你答复。另一种情况是，研究人员没能对你的信件做出回应，但当他与你在某个会议上相遇时，他会在你做自我介绍时想起你的信，从而留下对你的好印象。你应该从他的角度考虑问题，如果你是他，每天收到50封投标一项预算达数百万英镑的研究项目的来信，你会停下手头的工作，去一字一句地去读一封你从没听说过的博士写给你的信吗？事实上，的确有许多百忙之中的研究人员会对写得好的陌生来信给出回应。
 
-**通过信件或电子邮件**
+    如果你收到了答复，那么一定要立刻寄出一封感谢信。如果你有一份很好的关于你研究项目的概述，或者研究报告的节选，也可以附带寄出。
 
-那些出版了著作的研究人员，尤其是一些有名的学者，总是会收到许多想要找他们帮忙的学生的来信。如果信写得无聊没有内容，比如“亲爱的哈根（Haagen）教授，我是一名在布达佩斯（Budapest）的研究生，正在做关于冰淇淋的研究，我希望在选课题方面得到您的指点。”这类信件只会显出学生的无能，研究人员会认为这样的学生不值得搭理。相反，如果学生能够简明地概括自己研究的主要信息，并提出具体的问题，那么信就会变得有趣得多。研究人员往往会答复此类信件（虽然可能无法立即答复）。研究人员需要抽时间读信，考虑其内容，决定是否及如何答复。又因为其他工作而不得不把回信的事搁在一边，这样一来，可能等上6个月才有机会给你答复。另一种情况是，研究人员没能对你的信件做出回应，但当他与你在某个会议上相遇时，他会在你做自我介绍时想起你的信，从而留下对你的好印象。你应该从他的角度考虑问题，如果你是他，每天收到50封投标一项预算达数百万英镑的研究项目的来信，你会停下手头的工作，去一字一句地去读一封你从没听说过的博士写给你的信吗？事实上，的确有许多百忙之中的研究人员会对写得好的陌生来信给出回应。
+    我们在这里特意没有给出理想的陌生信件的写作样本，因为我们不想在本书发表之后，读者们都依据样本写出一模一样的信寄给我们在学术圈内赫赫有名的同事们，而使我们成为我们同事的责难对象。然而我们在这里还是给出了一些你在写信前需要考虑的问题：
 
-如果你收到了答复，那么一定要立刻寄出一封感谢信。如果你有一份很好的关于你研究项目的概述，或者研究报告的节选，也可以附带寄出。
+    * 收信人的姓名和称呼你写对了吗？
+    * 你提的问题能显示出你是做了准备吗？
+    * 你的导师或指点你的前辈认为你提的问题有趣吗？
+    * 你的问题让一个正常人回答大概要花多长时间？（如果超过十分钟，你就应该考虑重新组织问题。）
+    * 你的信是否长到需要翻页才能读完？（如果是，缩短它。）
+    * 你的信是否很好地展示了你自己？它展示的是你是否是一个能够正确拼写、思考和提出有趣问题的人？
+    * 你的信给收信人提供了什么东西吗？如果是，你是否能兑现这个承诺？
 
-我们在这里特意没有给出理想的陌生信件的写作样本，因为我们不想在本书发表之后，读者们都依据样本写出一模一样的信寄给我们在学术圈内赫赫有名的同事们，而使我们成为我们同事的责难对象。然而我们在这里还是给出了一些你在写信前需要考虑的问题：
+在会议上
+:   要准备一些有趣的、与对方有关的话题来谈。可以夸奖对方，但说完好话之后要能提出问题，否则谈话就无法进行下去了。（再有名的学者，都会因为赞美之辞而感到尴尬，尤其是那些过于夸大其词的赞美。）提的问题最好是需要对方用好几句话来回答的，比如：“卡兹不（Katz）教授，我对您在《自然》杂志上发表的关于半随机体系的文章很感兴趣。您是否已经尝试将这种方法应用到网络贸易？”
 
-* 收信人的姓名和称呼你写对了吗？
-* 你提的问题能显示出你是做了准备吗？
-* 你的导师或指点你的前辈认为你提的问题有趣吗？
-* 你的问题让一个正常人回答大概要花多长时间？（如果超过十分钟，你就应该考虑重新组织问题。）
-* 你的信是否长到需要翻页才能读完？（如果是，缩短它。）
-* 你的信是否很好地展示了你自己？它展示的是你是否是一个能够正确拼写、思考和提出有趣问题的人？
-* 你的信给收信人提供了什么东西吗？如果是，你是否能兑现这个承诺？
+    利用会议提供的机会。如果对方在会上提出了一个很好的问题，你可以在会后找他谈谈你对该问题及该问题引发的其他问题的看法。如果你看到你想认识的人正在和一个你认识的人交谈，你可以请这个人帮你介绍一下。如果对方正站在一群人中讨论问题，你可以凑到人群边上听他们的谈话，等待自己说话的机会（一个问题或一个笑话都是不错的选择）或询问能否加入讨论。把人叫住的最佳时机是会议结束后人们离席准备享用咖啡或午餐的空当。但要注意不要耽误对方享用茶点，应该边走边谈。
 
-**在会议上**
+    应该准备名片，除此以外还可以递上一份你的研究概况（必须是事先通过导师审阅修改过）。
 
-要准备一些有趣的、与对方有关的话题来谈。可以夸奖对方，但说完好话之后要能提出问题，否则谈话就无法进行下去了。（再有名的学者，都会因为赞美之辞而感到尴尬，尤其是那些过于夸大其词的赞美。）提的问题最好是需要对方用好几句话来回答的，比如：“卡兹不（Katz）教授，我对您在《自然》杂志上发表的关于半随机体系的文章很感兴趣。您是否已经尝试将这种方法应用到网络贸易？”
+    别以为自己是不引人注目的，甚至是不值得别人感兴趣的。以下给出了关于伟大学者的一些事实，可以帮助你更真实地看待他们：
 
-利用会议提供的机会。如果对方在会上提出了一个很好的问题，你可以在会后找他谈谈你对该问题及该问题引发的其他问题的看法。如果你看到你想认识的人正在和一个你认识的人交谈，你可以请这个人帮你介绍一下。如果对方正站在一群人中讨论问题，你可以凑到人群边上听他们的谈话，等待自己说话的机会（一个问题或一个笑话都是不错的选择）或询问能否加入讨论。把人叫住的最佳时机是会议结束后人们离席准备享用咖啡或午餐的空当。但要注意不要耽误对方享用茶点，应该边走边谈。
-
-应该准备名片，除此以外还可以递上一份你的研究概况（必须是事先通过导师审阅修改过）。
-
-别以为自己是不引人注目的，甚至是不值得别人感兴趣的。以下给出了关于伟大学者的一些事实，可以帮助你更真实地看待他们：
-
-* 他们伟大的原因往往是因为他们喜欢新鲜的想法和问——题不所以他们通常会乐于听到好想法和好问题；
-* 他们和我们一样，无法抗拒赞美之辞；
-* 他们也曾是学生，他们中的很多人仍对学生时代记忆犹新。
+    * 他们伟大的原因往往是因为他们喜欢新鲜的想法和问——题不所以他们通常会乐于听到好想法和好问题；
+    * 他们和我们一样，无法抗拒赞美之辞；
+    * 他们也曾是学生，他们中的很多人仍对学生时代记忆犹新。
 
 ### 人际关系网络应该包括的人
 
 以上谈的主要是怎样联系到研究人员，使自己在研究领域得到他们的帮助。除此以外，还有一些人可以在其他方面帮到你，他们可能会被你忽视，所以我们在这里将简短地讨论这些人的作用。
 
-**引路人（Mentor）**[^mnt]
+引路人（Mentor）[^mnt]
+:   引路人是关心你的生活、职业和学术发展的有智慧的人。他教会你那些“潜规则”，让你看到事情的“整体面貌”。理论上，你的导师不应该是你的引路人，但情况并不一定如此。引路人在研究方面比你更有经验，他会告诉你获取成功和取得信息的诀窍，他会向你展示你根本不知道该如何去寻找的东西。如果你还没有意识到寻找某些东西或做某些事的重要性，那么引路人的指点就更加必要了。比如你可能不知道要尽可能早地准备一份有效的简历——你的朋友不一定知道什么样的简历才是有效的，而且这方面的判断有时是与人的直觉相矛盾的。又比如，学生们往往能看到存在于校内的“显性”不合理现象（因为存在而不合理），但却觉察不到“隐性”不合理现象（因为没有存在但应该存在而不合理）。引路人在这些方面都能给出有用的指导和建议。
 
 [^mnt]: Mentor也是英国大学里的“导师”，但与主要管学术研究的导师（Supervisor）职责不完全一样。——译者注
 
-引路人是关心你的生活、职业和学术发展的有智慧的人。他教会你那些“潜规则”，让你看到事情的“整体面貌”。理论上，你的导师不应该是你的引路人，但情况并不一定如此。引路人在研究方面比你更有经验，他会告诉你获取成功和取得信息的诀窍，他会向你展示你根本不知道该如何去寻找的东西。如果你还没有意识到寻找某些东西或做某些事的重要性，那么引路人的指点就更加必要了。比如你可能不知道要尽可能早地准备一份有效的简历——你的朋友不一定知道什么样的简历才是有效的，而且这方面的判断有时是与人的直觉相矛盾的。又比如，学生们往往能看到存在于校内的“显性”不合理现象（因为存在而不合理），但却觉察不到“隐性”不合理现象（因为没有存在但应该存在而不合理）。引路人在这些方面都能给出有用的指导和建议。
+秘书和其他员工
+:   一定要尊敬学校的员工秘书、技术人员、设备保管人员等等。不要低估他们的价值。不要将薪水高低与有用程度混为一谈。这些员工是有用信息的保管者和整理者。他们使学校得以正常运转，他们提供服务与帮助，他们往往是你所要得到的信息的保管人。考虑一下：如果你想得到政府政策的内幕，你是去问总理大臣，还是去问行政机关？记者往往深谙此道，总是会与他们调查对象的秘书搞好关系。
 
-**秘书和其他员工**
-
-一定要尊敬学校的员工秘书、技术人员、设备保管人员等等。不要低估他们的价值。不要将薪水高低与有用程度混为一谈。这些员工是有用信息的保管者和整理者。他们使学校得以正常运转，他们提供服务与帮助，他们往往是你所要得到的信息的保管人。考虑一下：如果你想得到政府政策的内幕，你是去问总理大臣，还是去问行政机关？记者往往深谙此道，总是会与他们调查对象的秘书搞好关系。
-
-**优秀的人**
-
-优秀的人是一个取之不尽的资源。他们有的在社交圈或职业圈拥有极好的人际网络，有的对许多文献有着百科全书式的了解，有的人很好，很乐于帮忙。优秀的人是值得欣赏和珍惜的。作为一个新生，你可能还没有发现符合以上描述的人（更有可能的情况是，你没有意识到他们就在你身边）。当你真正遇到了优秀的人，好好对待他们。图书管理员和秘书往往也很优秀，与他们建立友谊常常是一件有意义的事。
+优秀的人
+:   优秀的人是一个取之不尽的资源。他们有的在社交圈或职业圈拥有极好的人际网络，有的对许多文献有着百科全书式的了解，有的人很好，很乐于帮忙。优秀的人是值得欣赏和珍惜的。作为一个新生，你可能还没有发现符合以上描述的人（更有可能的情况是，你没有意识到他们就在你身边）。当你真正遇到了优秀的人，好好对待他们。图书管理员和秘书往往也很优秀，与他们建立友谊常常是一件有意义的事。
