--- a/06.Rmd
+++ b/06.Rmd
@@ -119,15 +119,13 @@
 
 两个关键的概念是加权（Weighting）和布尔数学检索（Boolean Search）。
 
-**加权**
+加权
+:   加权就是给各个事物分配不同的权重（比如从重要性或相关程度上来分配）在这里，通常指的是给关键词和记录分配不同的权重。这使得搜索引擎可以对给出的结果进行系统的排序。一种较为普遍的排序方法是使用“逆文本频率指数”（inverse frequency weighting）越不常见的词条得到的比重就越高，理由是它的指称对象会比较具体，信息含量也会较高。举个例子来说，如果输入“低墒系统”这个关键词，检索引擎会给“低”和“系统”分配低权重，因为在数以百万计的记录中都出现了这两个词，而“墒”分配高权重，因为这个词出现的频率很低。
 
-加权就是给各个事物分配不同的权重（比如从重要性或相关程度上来分配）在这里，通常指的是给关键词和记录分配不同的权重。这使得搜索引擎可以对给出的结果进行系统的排序。一种较为普遍的排序方法是使用“逆文本频率指数”（inverse frequency weighting）越不常见的词条得到的比重就越高，理由是它的指称对象会比较具体，信息含量也会较高。举个例子来说，如果输入“低墒系统”这个关键词，检索引擎会给“低”和“系统”分配低权重，因为在数以百万计的记录中都出现了这两个词，而“墒”分配高权重，因为这个词出现的频率很低。
+    在选择关键词时应该记住一点：用具体的关键词会搜索出较少的记录，但其中有用记录占的比例会比较高。
 
-在选择关键词时应该记住一点：用具体的关键词会搜索出较少的记录，但其中有用记录占的比例会比较高。
-
-**布尔数学检索**
-
-布尔数学检索是在关键词中加入“AND”，“OR”以及“NOT”这些词。例如，如果关键词是“储存”AND“网络”，搜索得出的结果就是所有同时含有“储存”和“网络”这两个词的记录。如果关键词是“储存”OR“网络”，搜索得出的结果就是所有含有“储存”的记录，加上所有含有“网络”的记录。如果关键词是“储存”NOT“网络”，那么搜索得出的结果就是所有只包含“储存”而不包含“网络”的记录。如果你在检索过程中想要排除与你研究的课题名字相近的另一个课题的相关信息，这个方法就很管用。举个例子来说，如果你要查找有关巡回上演保留剧目的剧场（repertory theater）的信息，却发现很多检索结果是关于凯利方格技术（repertory grid technique）的，那么布尔数学检索就可以帮你解决这个问题。
+布尔数学检索
+:   布尔数学检索是在关键词中加入“AND”，“OR”以及“NOT”这些词。例如，如果关键词是“储存”AND“网络”，搜索得出的结果就是所有同时含有“储存”和“网络”这两个词的记录。如果关键词是“储存”OR“网络”，搜索得出的结果就是所有含有“储存”的记录，加上所有含有“网络”的记录。如果关键词是“储存”NOT“网络”，那么搜索得出的结果就是所有只包含“储存”而不包含“网络”的记录。如果你在检索过程中想要排除与你研究的课题名字相近的另一个课题的相关信息，这个方法就很管用。举个例子来说，如果你要查找有关巡回上演保留剧目的剧场（repertory theater）的信息，却发现很多检索结果是关于凯利方格技术（repertory grid technique）的，那么布尔数学检索就可以帮你解决这个问题。
 
 学会高级检索是很有用的。你可以询问图书管理员有关高级检索的知识，他们通常会很乐意帮助你。
 
@@ -153,33 +151,29 @@
 
 评审人往往会在读论文主体前先看参考文献。参考文献包含着很多信息。参考文献的失败往往会反映在质量低劣的论文主体中。以下列出了评审人评估时依据的主要标准。
 
-**必须符合的要求**
+必须符合的要求
+:   * 你采用的格式，包括每一个标点符号，都正确吗？
+    * 你是否引用了所有重要的核心文献？
+    * 你引用的文献是否具有多样性，有没有覆盖最重要的以及最新的文献？
+    * 你的文献来源是权威性的学术期刊，还是教科书和因特网？（在这个阶段，你应该已经把学术期刊作为主要参考资料来使用，教科书和因特网只能是在极特殊的情况下才拿来使用。）
 
-* 你采用的格式，包括每一个标点符号，都正确吗？
-* 你是否引用了所有重要的核心文献？
-* 你引用的文献是否具有多样性，有没有覆盖最重要的以及最新的文献？
-* 你的文献来源是权威性的学术期刊，还是教科书和因特网？（在这个阶段，你应该已经把学术期刊作为主要参考资料来使用，教科书和因特网只能是在极特殊的情况下才拿来使用。）
-
-**加分项**
-
-* 你是否引用了一些不常见的，只有某领域的高级研究人员才知道的文献？
-* 你是否引用了正在印刷、还未出版的文献？（如果是，这意味着你已经真正成为一名学术圈的成员，有资格获得预先印发稿。）
-* 如果你引用了预先印发稿上的内容，该稿件的作者在领域内是否占有重要地位？
-* 你是否引用了你本人在权威期刊上发表过的文章，其中有没有与著名学者合著的文章？
+加分项
+:   * 你是否引用了一些不常见的，只有某领域的高级研究人员才知道的文献？
+    * 你是否引用了正在印刷、还未出版的文献？（如果是，这意味着你已经真正成为一名学术圈的成员，有资格获得预先印发稿。）
+    * 如果你引用了预先印发稿上的内容，该稿件的作者在领域内是否占有重要地位？
+    * 你是否引用了你本人在权威期刊上发表过的文章，其中有没有与著名学者合著的文章？
 
 ### 附件（对于博士论文而言，一般论文不要求）
 
 经验丰富的评审人在阅读论文之前一般还会检查附件。附件包括你在研究过程中制作的材料，比如你给调查对象看的简要说明材料。如果附件中的材料设计得很糟糕，语言陈述也不清晰，那么你采集的数据很可能就没有什么价值。
 
-**好的附件**
+好的附件
+:   * 完整的研究各阶段样本，包括从最初的数据采集到最后的制表。
+    * 给调查对象看的材料显得清晰而且专业。
 
-* 完整的研究各阶段样本，包括从最初的数据采集到最后的制表。
-* 给调查对象看的材料显得清晰而且专业。
-
-**不好的附件**
-
-* 附件中包含了所有的原始数据，使附件比论文的其他部分都长。
-* 给调查对象看的材料制作粗糙，版面不整洁，语言不清晰。
+不好的附件
+:   * 附件中包含了所有的原始数据，使附件比论文的其他部分都长。
+    * 给调查对象看的材料制作粗糙，版面不整洁，语言不清晰。
 
 ### 标题页与致谢
 
@@ -199,40 +193,36 @@
 
 我们能给出的最好的建议是尽可能多地获取专家的反馈。另一个好办法是阅读你的研究领域里的重要学术论文，学习它们的摘要是怎么写的。
 
-**好的摘要**
+好的摘要
+:   * 恰当地使用专业术语
+    * 清晰
+    * 陈述重要发现及其意义
+    * 拼写和标点符号使用正确（这是论文主体的第一页，决定着读者的第一印象，所以你应该费点心思把它写好）。
 
-* 恰当地使用专业术语
-* 清晰
-* 陈述重要发现及其意义
-* 拼写和标点符号使用正确（这是论文主体的第一页，决定着读者的第一印象，所以你应该费点心思把它写好）。
-
-**不好的摘要**
-
-* 不妥当的写作风格
-* 大话连篇
-* 自我推销
-* 空洞的内容
-* 不清晰的表达
+不好的摘要
+:   * 不妥当的写作风格
+    * 大话连篇
+    * 自我推销
+    * 空洞的内容
+    * 不清晰的表达
 
 ### 目录页（对博士论文而言，一般论文不要求）
 
 博士论文必须有目录页。
 
-**好的目录页**
+好的目录页
+:   * 论文的框架结构符合特定研究领域的学术规范标准（如果该领域存在着统一标准的话）
+    * 整洁
+    * 清晰
+    * 给出有用信息
+    * 合适的表清单
+    * 合适的图清单
 
-* 论文的框架结构符合特定研究领域的学术规范标准（如果该领域存在着统一标准的话）
-* 整洁
-* 清晰
-* 给出有用信息
-* 合适的表清单
-* 合适的图清单
-
-**不好的目录页**
-
-* 论文的框架结构不符合规范标准
-* 粗糙且不清晰
-* 图表清单与论文的研究领域不匹配
-* 目录页上的页码数与论文中的页码数不对应
+不好的目录页
+:   * 论文的框架结构不符合规范标准
+    * 粗糙且不清晰
+    * 图表清单与论文的研究领域不匹配
+    * 目录页上的页码数与论文中的页码数不对应
 
 每个研究领域对图表的规定都不一样。有的喜欢使用图表，有的不喜欢。如果你用了别人书上的表格，还要留意著作权问题。
 
@@ -268,19 +258,17 @@
 
 这两段论文的有趣之处在于，它们出自同一个作者之手，讨论的课题也紧密相关，唯一的一个明显区别是两者的写作目的。第一段文章节选自一篇通过正常渠道投给期刊的学术论文。它必须显示出足够的学术分量才能说服审阅人，使他们相信这是一篇值得发表的论文。第二段节选自一篇写在百科全书上的文章。百科全书的读者群是非专业人士，这就意味若文章的特色和要求必须有别于期刊论文一比如不需要使用高度精简概括的句子。
 
-**好的首页**
+好的首页
+:   * 清晰
+    * 合适的写作风格（要显得正式，即使这意味着文章枯燥生硬）
+    * 使用正确的参考文献
+    * 提出好的研究问题
 
-* 清晰
-* 合适的写作风格（要显得正式，即使这意味着文章枯燥生硬）
-* 使用正确的参考文献
-* 提出好的研究问题
-
-**不好的首页**
-
-* 体现不出学术性
-* 不清晰
-* 没有提出研究问题，或者问题提得不好
-* 恳求读者的同情体谅，以及其他透露出文章弱点的迹象
+不好的首页
+:   * 体现不出学术性
+    * 不清晰
+    * 没有提出研究问题，或者问题提得不好
+    * 恳求读者的同情体谅，以及其他透露出文章弱点的迹象
 
 有判断力的读者在读完首页后，往往会翻到讨论方法或给出结果的章节（并不总是如此，但一般情况下，他们不会马上看第二页）。
 
@@ -296,19 +284,17 @@
 
 各个学科在这方面有不同惯例。如果是实验科学学科，论文的结果应该尽可能明确地、不加修饰地给出，最好不要有评论或讨论。出现一些解释和澄清是可以接受的，特别是在篇幅受到限制而使你不得不用简短的名称作为表格数据列的标题的时候。
 
-**好的结果**
+好的结果
+:   * 足够多的表格
+    * 表格设计和排列有逻辑
+    * 表格看上去整洁美观
+    * 数据合计没有错误
 
-* 足够多的表格
-* 表格设计和排列有逻辑
-* 表格看上去整洁美观
-* 数据合计没有错误
-
-**不好的的结果**
-
-* 表格太少或太多
-* 表格排列混乱，读者看不出每个表格说明的结果
-* 表格看上去粗糙，不整洁
-* 数据合计有问题
+不好的的结果
+:   * 表格太少或太多
+    * 表格排列混乱，读者看不出每个表格说明的结果
+    * 表格看上去粗糙，不整洁
+    * 数据合计有问题
 
 ### 讨论部分
 
@@ -372,9 +358,8 @@
 
 给予别人肯定永远不会使你蒙受损失。事实上，你很有可能因为这方面做得好而得到别人的尊敬和信任。
 
-**剽窃**
-
-不同文化对剽窃的定义各有不同，但你的论文是否有剽窃行为将按照英国学术界对剽窃的定义来判断。英国学术界对剽窃的定义是很严格的：剽窃是指间接或直接地使用别人的想法、语句或材料，而不对此进行指明。
+剽窃
+:   不同文化对剽窃的定义各有不同，但你的论文是否有剽窃行为将按照英国学术界对剽窃的定义来判断。英国学术界对剽窃的定义是很严格的：剽窃是指间接或直接地使用别人的想法、语句或材料，而不对此进行指明。
 
 规则很清楚：
 
@@ -383,21 +368,20 @@
 
 让我们把话说清楚，剽窃是学术上的自杀行为。在英国的学术圈，剽窃被认为是是“致命的罪行”。如果你的论文出现了剽窃，你一定会被判不合格。如果你准备在期刊上发表的文章出现了剽窃，你的文章一定会被退回来，你本人还会被列入黑名单。所以如果你对使用的材料和信息有任何怀疑，找出它们的来源，指出出处。
 
-**如何引用**
+如何引用
+:   在作者通过使用文献可以传达很多东西。其中有一些是关于论文内容的（工具性使用），而另一些则是关于他们自己的（表现性使用）：
 
-在作者通过使用文献可以传达很多东西。其中有一些是关于论文内容的（工具性使用），而另一些则是关于他们自己的（表现性使用）：
-
-* 建立你的权威性；
-* 引用你自已发表过的文章；
-* 覆盖面——能体现出你熟悉学术规范的要求；
-* 深度——能体现出你掌握了那些最不为人所知的文献；
-* 在排除你不想涉及的领域同时，指出你是了解这些领域的；
-* 表达对审阅人的尊敬；
-* 体现你研究问题的合理性；
-* 体现你研究方法的合理性；
-* 体现你数据分析的合理性；
-* 提供一个理论框架或视角
-* 证实你的研究发现。
+    * 建立你的权威性；
+    * 引用你自已发表过的文章；
+    * 覆盖面——能体现出你熟悉学术规范的要求；
+    * 深度——能体现出你掌握了那些最不为人所知的文献；
+    * 在排除你不想涉及的领域同时，指出你是了解这些领域的；
+    * 表达对审阅人的尊敬；
+    * 体现你研究问题的合理性；
+    * 体现你研究方法的合理性；
+    * 体现你数据分析的合理性；
+    * 提供一个理论框架或视角
+    * 证实你的研究发现。
 
 思考以下问题：
 
@@ -441,11 +425,10 @@
 
 ### 做一份带说明的文献目录（annotated bibliography）
 
-**核心文献库**
+核心文献库
+:   有建树的研究人员拥有的一样东西是对相关文献的不断更新的知识。他们中的大多数人都有这100到150部核心文献构成的储备，他们可以随时将其中任何文献调出来使用。这个核心储备是从他们读过的成百上于的文章和书籍中挑选汇集起来的。有了这个储备，研究人员就能将自己的学术思想放置在一个体系之中：这个体系包含了所有领域内的主要思想派别和所有重要的研究人员，并提供研究模型和样本。当然了，储备必须更新才能完善。
 
-有建树的研究人员拥有的一样东西是对相关文献的不断更新的知识。他们中的大多数人都有这100到150部核心文献构成的储备，他们可以随时将其中任何文献调出来使用。这个核心储备是从他们读过的成百上于的文章和书籍中挑选汇集起来的。有了这个储备，研究人员就能将自己的学术思想放置在一个体系之中：这个体系包含了所有领域内的主要思想派别和所有重要的研究人员，并提供研究模型和样本。当然了，储备必须更新才能完善。
-
-博士生阶段学习的一个部分是形成自己的核心储备。编制一份带说明的文献目录为获取核心储备提供了一个有效机制。同时，通过记录核心储备以外的主要文献的信息，它又是核心储备的有效补充。带说明的文献书目是有用的研究工具。这个工具是你个人使用的，所以你可以按照你自己的思维和习惯去设计它。
+    博士生阶段学习的一个部分是形成自己的核心储备。编制一份带说明的文献目录为获取核心储备提供了一个有效机制。同时，通过记录核心储备以外的主要文献的信息，它又是核心储备的有效补充。带说明的文献书目是有用的研究工具。这个工具是你个人使用的，所以你可以按照你自己的思维和习惯去设计它。
 
 Table: (\#tab:lit-usage) 学生利用文献的发展过程
 
@@ -456,57 +439,53 @@ Table: (\#tab:lit-usage) 学生利用文献的发展过程
 | 调查研究、收集信息、写报告 | 组织信息           | 选择与研究问题相关的信息         | 评价信息（质量和差距）         |
 | 思考如何组织资源           | 思考如何区分问题   | 思考关于这个问题什么是已经说过的 | 思考关于这个问题什么是没有说的 |
 
-**说明应该包含哪些内容**
+说明应该包含哪些内容
+:   最少应该包括的内容：
 
-最少应该包括的内容：
+    * 参考书目的基本信息（读者要找到这部文献必须知道的信息）；
+    * 你阅读该文献的日期；
+    * 你认为它在哪些方面是有趣的／重要的／让人不解的，将你的感受记录下来。你的笔记不应该抄袋原文献的摘要部分，而应该是你自己的批判性思考。它可以是非正式的、不符合语法的，甚至是偏激的，只要它表达出了你想表达的意思就行。如果你在重读某一文献时有了新的感受，那么应该对笔记进行补充——但即使你改变了你的观点或看法，也一定要保留原来的笔记。
 
-* 参考书目的基本信息（读者要找到这部文献必须知道的信息）；
-* 你阅读该文献的日期；
-* 你认为它在哪些方面是有趣的／重要的／让人不解的，将你的感受记录下来。你的笔记不应该抄袋原文献的摘要部分，而应该是你自己的批判性思考。它可以是非正式的、不符合语法的，甚至是偏激的，只要它表达出了你想表达的意思就行。如果你在重读某一文献时有了新的感受，那么应该对笔记进行补充——但即使你改变了你的观点或看法，也一定要保留原来的笔记。
+    它能包括其他一些有用的信息，比如：
 
-它能包括其他一些有用的信息，比如：
+    * 文献来源（是复印稿、图书馆藏，还是个人收藏？）；
+    * 关键词，最好是不同类型的关键词；
+    * 后续研究要用到的参考文献；）
+    * 你是怎么发现某部文献的（比如是谁推荐了它，或引用了它）
+    * 与某部文献相关的其他文献信息；
+    * 有关作者信息的摘要。
 
-* 文献来源（是复印稿、图书馆藏，还是个人收藏？）；
-* 关键词，最好是不同类型的关键词；
-* 后续研究要用到的参考文献；）
-* 你是怎么发现某部文献的（比如是谁推荐了它，或引用了它）
-* 与某部文献相关的其他文献信息；
-* 有关作者信息的摘要。
+学术训练
+:   保存制作带说明的文献目录是一种学术训练。要养成这种训练的习惯，最有效的办法是在阅读文献的同时就做记录，并在记录完成后再开始阅读新的文献。如果你没有及时记录，你就会不得不试图重新拾起以前读过的东西．这样做的难度会大得多。因为记录参考文献是耗费精力的一笔“支出”，又因为记录的目的是为了更有效地使用文献资料，所以最好将每部文献的摘要精简到一页左右。
 
-**学术训练**
+    不要删除以前做下的文献记录。“废弃物在”可以重新分类或单独保存，某一年的“垃圾”可能会成为下一年的“宝藏”（反之亦然）。同时，保留分类变动的记录是很有意义的，它的一个做法就是列出你现在使用的所有类别的在“定义”。在对分类进行调整之后，不要丢弃原来的分类方案，而是应该将它保存起来，作为记录的一部分。
 
-保存制作带说明的文献目录是一种学术训练。要养成这种训练的习惯，最有效的办法是在阅读文献的同时就做记录，并在记录完成后再开始阅读新的文献。如果你没有及时记录，你就会不得不试图重新拾起以前读过的东西．这样做的难度会大得多。因为记录参考文献是耗费精力的一笔“支出”，又因为记录的目的是为了更有效地使用文献资料，所以最好将每部文献的摘要精简到一页左右。
-
-不要删除以前做下的文献记录。“废弃物在”可以重新分类或单独保存，某一年的“垃圾”可能会成为下一年的“宝藏”（反之亦然）。同时，保留分类变动的记录是很有意义的，它的一个做法就是列出你现在使用的所有类别的在“定义”。在对分类进行调整之后，不要丢弃原来的分类方案，而是应该将它保存起来，作为记录的一部分。
-
-这种训练的目的是要持续性地积累你阅读和思考的记录。
+    这种训练的目的是要持续性地积累你阅读和思考的记录。
 
 文献目录的其他好处
+:   * 它能帮助你回顾你的思考过程；
+    * 它能反映出你的阅读和思想是怎样不断成熟的，你是怎样一步步认识到某些问题的重要性的，又是怎样一步步完善你的阅读记录的；
+    * 当你看到一条参考书目却记不起那部文献的具体观点时，摘要能给你关键性的提示；
+    * 当你在答辩前重读某些文献，产生了与以前不同的理解时，你以前做下的笔记会对你很有帮助。
 
-* 它能帮助你回顾你的思考过程；
-* 它能反映出你的阅读和思想是怎样不断成熟的，你是怎样一步步认识到某些问题的重要性的，又是怎样一步步完善你的阅读记录的；
-* 当你看到一条参考书目却记不起那部文献的具体观点时，摘要能给你关键性的提示；
-* 当你在答辩前重读某些文献，产生了与以前不同的理解时，你以前做下的笔记会对你很有帮助。
+    文献目录可以帮助你有效地规划你的阅读，并使你能够充分地利用丰富的文献资源，如果仅靠记忆力，你能支配的资源就会有限得多。要牢记：
 
-文献目录可以帮助你有效地规划你的阅读，并使你能够充分地利用丰富的文献资源，如果仅靠记忆力，你能支配的资源就会有限得多。要牢记：
+    * 文献目录能使你在拥有一个在“死板的”、一目了然的文件归档系统（比如按作者姓名的宇母排序）的同时，进行分类、再分类和便捷的搜索；
+    * 文献目录可以防止你重新阅读那些没有价值的、只是名字有趣的文献；
+    * 文献目录可以帮助你记录文献的装帧形式和所在地。
 
-* 文献目录能使你在拥有一个在“死板的”、一目了然的文件归档系统（比如按作者姓名的宇母排序）的同时，进行分类、再分类和便捷的搜索；
-* 文献目录可以防止你重新阅读那些没有价值的、只是名字有趣的文献；
-* 文献目录可以帮助你记录文献的装帧形式和所在地。
+方法
+:   记录参考文献的方法多种多样。最普遍的两种形式是卡片分类和电子数据库。
 
-**方法**
+    卡片系统的样本（来自萨丽在·芬舍）
 
-记录参考文献的方法多种多样。最普遍的两种形式是卡片分类和电子数据库。
+    * Kenneth 0. May (1973) Bibliography and Research Manual of the History of Mathematics. University of Toronto Press. (particularly pp. 2-27).
+    * Robert M. Prisig (1991) Lila: An Inquiry into Morals. Bantam Press (particularly pp. 22-9).
 
-卡片系统的样本（来自萨丽在·芬舍）
+    文献管理软件
 
-* Kenneth 0. May (1973) Bibliography and Research Manual of the History of Mathematics. University of Toronto Press. (particularly pp. 2-27).
-* Robert M. Prisig (1991) Lila: An Inquiry into Morals. Bantam Press (particularly pp. 22-9).
+    * Papyrus: http://www.rsd.com/
+    * ProCite: http://www.risinc.com/
+    * EndNote: http://www.niles.com/
 
-文献管理软件
-
-* Papyrus: http://www.rsd.com/
-* ProCite: http://www.risinc.com/
-* EndNote: http://www.niles.com/
-
-许多人不使用这些文献管理软件，他们偏好使用数据库、表格和在Word文档等。很多有效的参考文献可能只是一个较大的文本文件而已。
+    许多人不使用这些文献管理软件，他们偏好使用数据库、表格和在Word文档等。很多有效的参考文献可能只是一个较大的文本文件而已。
