--- a/08.Rmd
+++ b/08.Rmd
@@ -44,25 +44,20 @@
 
 ### 发表的过程
 
-**接受**
+接受
+:   如果你进入到这个阶段，你会收到一份编辑的来信或电子邮件，通知你论文将被发表在《尤毛鼠研究》（*Journal of Nude Mice Study*）或其他某份期刊上。编辑可能会要求你再寄去一些改动后文稿的原件和／或电子文档。
 
-如果你进入到这个阶段，你会收到一份编辑的来信或电子邮件，通知你论文将被发表在《尤毛鼠研究》（*Journal of Nude Mice Study*）或其他某份期刊上。编辑可能会要求你再寄去一些改动后文稿的原件和／或电子文档。
+文字编辑
+:   你的文章被接受之后，期刊的文字编辑将与你联系。文字编辑对你文章的学术内容丝毫不感兴趣，他关心的只是文章的外观。他的职责就是保证你的文章拼写正确、符合语法、标点符号使用无误、正文和表格中提到的数据是否前后一致。文字编辑在发现一些有出人或遗漏的参考文献信息、正文和表格中数据不统一等情况时，将寄给你一份需要你澄清的问题清单。典型的问题清单是类似这样的：“第8页第7行引用了史密斯1999，然而参考书目中显示的是史密斯1998，哪一个是正确的？”要回答这类问题可不轻松，你必须要再找出原文来核对。水平高的、经验丰富的研究员通常会在收到文字编辑来信的当天就对其所有疑问给予完整的答复，这种做法很受文字编辑的赞赏。新手往往做不到这一点，他们在核对原文的痛苦过程中将会更加深刻地领悟：为什么导师如此强调参考文献的信息必须记录准确。如果文字编辑花了大量时间来修改你的论文，你可能就要为这部分时间支付费用（文字编辑的时间可是不便宜的），所以少犯错误也是有经济效益的。
 
-**文字编辑**
+图表
+:   图表方面常常存在一些问题，使投稿人和期刊编辑双方都不愉快。我们在这里把图和表放在一起讲，因为它们的问题很相似。由于某些技术原因，很多出版社的印刷商分开处理图表和文字，最后再将图表插入到文字部分，还有一些印刷商却不这么做。写给投稿人的投稿须知会清楚地告诉你应该怎样处理图表。很多期刊都会要求将图表单独列出，附在正文后面，并在正文中需要插入表格的位置上标出记号，注明表格序号（通常是空一行．在需要加入表格的确切位置上画一条线，注上“表格1在此”）。如果你违反规定，将表格写在了正文中，你不是被要求用正确的格式重写文章，就是要面对文章发表后极不整洁的版面效果。你的文章的文字部分将非常整洁漂亮，而夹杂在其中的图表却像在泥里浸过一样，与在同一期刊登的其他文章中整洁专业的图表形成鲜明的反差。你当然可以告诉编辑组，在这个电子出版时代，解决这个问题的技术含最最高的方法应该是使用图文混排的电子文档，但这么说其实是很不识趣的。你应该问问自己，编辑组选择了他们目前所使用的这一套出版流程是因为他们不知道有更先进的技术存在，还是因为可能有其他方面的，为你所不知的因素致使他们必须选择目前使用的技术。
 
-你的文章被接受之后，期刊的文字编辑将与你联系。文字编辑对你文章的学术内容丝毫不感兴趣，他关心的只是文章的外观。他的职责就是保证你的文章拼写正确、符合语法、标点符号使用无误、正文和表格中提到的数据是否前后一致。文字编辑在发现一些有出人或遗漏的参考文献信息、正文和表格中数据不统一等情况时，将寄给你一份需要你澄清的问题清单。典型的问题清单是类似这样的：“第8页第7行引用了史密斯1999，然而参考书目中显示的是史密斯1998，哪一个是正确的？”要回答这类问题可不轻松，你必须要再找出原文来核对。水平高的、经验丰富的研究员通常会在收到文字编辑来信的当天就对其所有疑问给予完整的答复，这种做法很受文字编辑的赞赏。新手往往做不到这一点，他们在核对原文的痛苦过程中将会更加深刻地领悟：为什么导师如此强调参考文献的信息必须记录准确。如果文字编辑花了大量时间来修改你的论文，你可能就要为这部分时间支付费用（文字编辑的时间可是不便宜的），所以少犯错误也是有经济效益的。
+校样
+:   下一个关键阶段涉及校样。校样是印刷厂出的初印稿，体现了你的稿子最终刊登在期刊上时的视觉效果。由于技术和物流方面的原因，校样在出版前的最后一刻才出来，作者在收到校样后必须在一个规定的、极短的时间内完成核对，并将核对后的校样再寄到编辑部，从收到校样到再次寄出校样通常仅24小时到三天的时间。你可以考虑一下这种流程可能会引起的问题，比如你因为正在外地度假而没有收到校样，而碰巧校样上有一个后果严重的打印错误，让你看起来像一个笨蛋或学术上的江湖骗子，那你该怎么办？你还可以考虑一下你对修改核对稿件懂得多少，你是否能用合理的方式指出打印错误（比如如果你在校样上写上了这样的评语“这应该是‘24’，你这个白痴”，没想到这句评语也被刊登了出来）。校样寄给作者时，般还附有帮助作者进行修改的指导性内容。但是如果能在正式进人这一阶段之前不是那么紧急的情况下进行一些校样修改的训练，这将对你很有帮助（与往常一样，与一位有经验的同事坐下来喝一杯咖啡会很有用——他们可能会向你透露，哪位秘书在文字编辑和校对方面最为擅长，你可以向这些行家讨教经验）。如果你估计在你外出时可能会有校样寄到，你可以让你的同事帮忙留意你的邮箱。
 
-**图表**
-
-图表方面常常存在一些问题，使投稿人和期刊编辑双方都不愉快。我们在这里把图和表放在一起讲，因为它们的问题很相似。由于某些技术原因，很多出版社的印刷商分开处理图表和文字，最后再将图表插入到文字部分，还有一些印刷商却不这么做。写给投稿人的投稿须知会清楚地告诉你应该怎样处理图表。很多期刊都会要求将图表单独列出，附在正文后面，并在正文中需要插入表格的位置上标出记号，注明表格序号（通常是空一行．在需要加入表格的确切位置上画一条线，注上“表格1在此”）。如果你违反规定，将表格写在了正文中，你不是被要求用正确的格式重写文章，就是要面对文章发表后极不整洁的版面效果。你的文章的文字部分将非常整洁漂亮，而夹杂在其中的图表却像在泥里浸过一样，与在同一期刊登的其他文章中整洁专业的图表形成鲜明的反差。你当然可以告诉编辑组，在这个电子出版时代，解决这个问题的技术含最最高的方法应该是使用图文混排的电子文档，但这么说其实是很不识趣的。你应该问问自己，编辑组选择了他们目前所使用的这一套出版流程是因为他们不知道有更先进的技术存在，还是因为可能有其他方面的，为你所不知的因素致使他们必须选择目前使用的技术。
-
-**校样**
-
-下一个关键阶段涉及校样。校样是印刷厂出的初印稿，体现了你的稿子最终刊登在期刊上时的视觉效果。由于技术和物流方面的原因，校样在出版前的最后一刻才出来，作者在收到校样后必须在一个规定的、极短的时间内完成核对，并将核对后的校样再寄到编辑部，从收到校样到再次寄出校样通常仅24小时到三天的时间。你可以考虑一下这种流程可能会引起的问题，比如你因为正在外地度假而没有收到校样，而碰巧校样上有一个后果严重的打印错误，让你看起来像一个笨蛋或学术上的江湖骗子，那你该怎么办？你还可以考虑一下你对修改核对稿件懂得多少，你是否能用合理的方式指出打印错误（比如如果你在校样上写上了这样的评语“这应该是‘24’，你这个白痴”，没想到这句评语也被刊登了出来）。校样寄给作者时，般还附有帮助作者进行修改的指导性内容。但是如果能在正式进人这一阶段之前不是那么紧急的情况下进行一些校样修改的训练，这将对你很有帮助（与往常一样，与一位有经验的同事坐下来喝一杯咖啡会很有用——他们可能会向你透露，哪位秘书在文字编辑和校对方面最为擅长，你可以向这些行家讨教经验）。如果你估计在你外出时可能会有校样寄到，你可以让你的同事帮忙留意你的邮箱。
-
-**其他相关注意事项**
-
-还有一些相关注意事项。首先，你寄出的复印稿必须是你寄出的电子文档的无差别打印版本。如果编辑组发现你做了改动，电子文档和原件之间存在差异，他们会极其气恼。第二点，在校对时不要对文章内容进行改动一只有印刷错误才需要更正。如果你擅自添了几个词，这在排版上会引起连锁反应，影响到后面儿页的版面效果，还会大大提高印刷成本。编辑们在改动的显和文章页数上都有预算限制，所以如果你擅自添加内容而使他们的这两项预算超支，他们会对你很不满意。
+其他相关注意事项
+:   还有一些相关注意事项。首先，你寄出的复印稿必须是你寄出的电子文档的无差别打印版本。如果编辑组发现你做了改动，电子文档和原件之间存在差异，他们会极其气恼。第二点，在校对时不要对文章内容进行改动一只有印刷错误才需要更正。如果你擅自添了几个词，这在排版上会引起连锁反应，影响到后面儿页的版面效果，还会大大提高印刷成本。编辑们在改动的显和文章页数上都有预算限制，所以如果你擅自添加内容而使他们的这两项预算超支，他们会对你很不满意。
 
 在这里还需要指出的一点是：文字编辑们其实是比较人性的，所以如果你有什么不明白的地方，可以打电话或发电子邮件给他们，与他们展开建设性的讨论。（他们一般总有紧迫的任务缠身，要与他们联系的话，打电话这种快捷的方式比寄信管用的多。）传真在交换局部修改意见时非常有用——你可以把自己的修改意见和说明标注在需要改动的文稿上，并将其传真给文字编辑。
 
