--- a/09.Rmd
+++ b/09.Rmd
@@ -38,15 +38,14 @@
 
 这一章的其余部分将讨论一些你急于想知道答案却又不好意思问的问题，还将涉及一些你应该知道答案却可能从未问过自己的问题。与通常一样，你的导师有最后发言权。我们给出的只是基本原则，你的论文有其特殊性，需要用到一些不同的处理方法。
 
-### 一些经典错误，以及如何避免它们
-
-* 不要拖到最后一刻。事先制订计划，留出充裕的时间对付意外情况，包括装订文稿的时间都应该事先安排好。
-* 不要含糊其锌。
-* 不要用模棱两可的语句来逃避问题——评审人能一眼就看出你是在逃避问题，并会在答辩时无情地质问你。
-* 不要将问题简单化。你的读者也是专业的研究人员，把问题简单化会让他们认为你没有领会你研究领域的复杂性。
-* 不要使用连你自己都不确定是什么意思的大词（big words）。错误使用大词会让你看起来像个白痴。评审人知道的大词、生僻词一定比你多，他们不会对你炫耀词汇量的行为产生什么好感。
-* 不要依据别的学科领域或别的国家的学术写作惯例来写你的博士论文。如果你不清楚自己的学科有哪些写作惯例，应该先弄清楚。如果你反对自己学科的写作惯例，你也应该在拿到博士学位后再表示出反对意见，博士论文不是你说在“不”的地方。
-* 最后，也是最重要的一点，不要忘记三条黄金法则：不要说谎；不要故作幽默；不要惊慌失措而在压力下吐露真相。
+一些经典错误，以及如何避免它们
+:   * 不要拖到最后一刻。事先制订计划，留出充裕的时间对付意外情况，包括装订文稿的时间都应该事先安排好。
+    * 不要含糊其锌。
+    * 不要用模棱两可的语句来逃避问题——评审人能一眼就看出你是在逃避问题，并会在答辩时无情地质问你。
+    * 不要将问题简单化。你的读者也是专业的研究人员，把问题简单化会让他们认为你没有领会你研究领域的复杂性。
+    * 不要使用连你自己都不确定是什么意思的大词（big words）。错误使用大词会让你看起来像个白痴。评审人知道的大词、生僻词一定比你多，他们不会对你炫耀词汇量的行为产生什么好感。
+    * 不要依据别的学科领域或别的国家的学术写作惯例来写你的博士论文。如果你不清楚自己的学科有哪些写作惯例，应该先弄清楚。如果你反对自己学科的写作惯例，你也应该在拿到博士学位后再表示出反对意见，博士论文不是你说在“不”的地方。
+    * 最后，也是最重要的一点，不要忘记三条黄金法则：不要说谎；不要故作幽默；不要惊慌失措而在压力下吐露真相。
 
 ## 论文结构
 
