--- a/10.Rmd
+++ b/10.Rmd
@@ -32,38 +32,33 @@
 
 要显示出你是专业人士，那么使用领域内专业人士的语言和写作惯例。如果你不清楚，就应该学习。读这本书以及其他相关书籍是一个好的开头。要使你的语言和其他非语言的方面都与没有经验的起步者区别开来。
 
-**惯例有什么用？**
+惯例有什么用？
+:   每门学科都有它自己的写作惯例。有一些高度正式，有一些则比较含蓄。要发现这些惯例，你就应该以分析的眼光来阅读文献。这些文献中的惯例可以：
 
-每门学科都有它自己的写作惯例。有一些高度正式，有一些则比较含蓄。要发现这些惯例，你就应该以分析的眼光来阅读文献。这些文献中的惯例可以：
+    * 体现学科的学术标准；
+    * 使读者能够读得懂论文；
+    * 使读者能认识、比较和复制／重复研究方法；
+    * 便于读者比较和综合一一使论文的形式转换成便于与其他论文相联系的形式。
 
-* 体现学科的学术标准；
-* 使读者能够读得懂论文；
-* 使读者能认识、比较和复制／重复研究方法；
-* 便于读者比较和综合一一使论文的形式转换成便于与其他论文相联系的形式。
+    遵守学科惯例就相当于告诉读者，你知道什么是重要的，也就是说“你是内行”。
 
-遵守学科惯例就相当于告诉读者，你知道什么是重要的，也就是说“你是内行”。
+体现出你有重要的东西要说
+:   要客气地、不带挑衅地传达这个信息。不能与你的读者产生对抗，但是应该让你的读者感觉到，你是一个专业人士，你不会给他们看二流的东西，浪费他们的时间。一个有用的诀窍是要换个角度考虑问题呵不要让读者感觉到你是在说：“看若我”，而是要让读者感觉到你是在说：“看这个”。如果你在一篇论文的开头提出了一个有趣的问题，并暗示了一个可能解决问题的有趣的办法，而不是告诉读者是你想到了一个有趣的问题，又是你看到了解决问题的可能性，那么你就上了轨道了（这种写作思路的一个好处是，如果你提出的解决方法没有奏效，它也并不能反映你本人的判断力值得怀疑）。
 
-**体现出你有重要的东西要说**
-
-要客气地、不带挑衅地传达这个信息。不能与你的读者产生对抗，但是应该让你的读者感觉到，你是一个专业人士，你不会给他们看二流的东西，浪费他们的时间。一个有用的诀窍是要换个角度考虑问题呵不要让读者感觉到你是在说：“看若我”，而是要让读者感觉到你是在说：“看这个”。如果你在一篇论文的开头提出了一个有趣的问题，并暗示了一个可能解决问题的有趣的办法，而不是告诉读者是你想到了一个有趣的问题，又是你看到了解决问题的可能性，那么你就上了轨道了（这种写作思路的一个好处是，如果你提出的解决方法没有奏效，它也并不能反映你本人的判断力值得怀疑）。
-
-从别的学科领域引入可能解决问题的方法往往是一种有效策略。这个别的领域必须具有足够的可靠性以至于可以被应用到你本人研究的课题上－这往往意味着，你所要引入的这个领域必须比你研究课题涉及的领域更加正式，具有更加完善的研究方法体系。你应该充分掌握你所要引入的领域，否则你提出的解决办法就不会具有可信度，那个领域的行家会把你看做是一个典型的新手，没读多少文献就开始自作主张，犯了新手常犯的错误，只是你的错误还涉及别的领域而已。一点肤浅的对某个其他领域的了解可能会使你在会议上蒙混过关，因为会议的听众席上可能没有来自那个领域的专家来揭露你。但如果是寄给期刊的稿件，那么你蒙混过关的可能性就为零了，因为期刊编辑一定会确保你的论文由相关领域的专家来鉴定。专家学者对很多生僻知识的了解程度是惊人的。
+    从别的学科领域引入可能解决问题的方法往往是一种有效策略。这个别的领域必须具有足够的可靠性以至于可以被应用到你本人研究的课题上－这往往意味着，你所要引入的这个领域必须比你研究课题涉及的领域更加正式，具有更加完善的研究方法体系。你应该充分掌握你所要引入的领域，否则你提出的解决办法就不会具有可信度，那个领域的行家会把你看做是一个典型的新手，没读多少文献就开始自作主张，犯了新手常犯的错误，只是你的错误还涉及别的领域而已。一点肤浅的对某个其他领域的了解可能会使你在会议上蒙混过关，因为会议的听众席上可能没有来自那个领域的专家来揭露你。但如果是寄给期刊的稿件，那么你蒙混过关的可能性就为零了，因为期刊编辑一定会确保你的论文由相关领域的专家来鉴定。专家学者对很多生僻知识的了解程度是惊人的。
 
 ## 了解你的敌人
 
 到了这个阶段，你应该要警惕你的敌人。你真正的敌人是那些读者可能将你与他们混淆起来的人。应该含蓄地，而非明确地告诉读者，你与他们是不同的。如果你明确地指出有哪些人与自己不能相提并论，那只能加深读者对你的坏印象，他们会认为你擅自做主，把自己放到高人一等的地位．但如果你能含蓄地表达这个意思，那就应该没有什么问题了。
 
-**渴望成功的新手**
+渴望成功的新手
+:   一类敌人就是那些没有深入阅读文献、犯典型的入门阶段错误的新手。你的论文需要发出强有力的信号，告诉读者你不属于那一类人。可以与专业人士喝杯咖啡聊一聊，让他们给你讲讲新手的典型错误有哪些。还有就是要全面深入地阅读文献，历史久远的文献也要读。你可能不相信，二十年前的文献对你也会有很大帮助——很多研究人员过于急功近利，往往没有耐心做基本的功课，结果却发现他们的研究前人早已做过了。没有什么东西可以长久地替代文献阅读，这本书里介绍的简便途径只是用来帮助你更有效地完成任务，而不是帮助你逃避任务。文献和研究方法一样，应该是你的朋友，你掌握的文献越多，你能自信地应付的问题也就越多。
 
-一类敌人就是那些没有深入阅读文献、犯典型的入门阶段错误的新手。你的论文需要发出强有力的信号，告诉读者你不属于那一类人。可以与专业人士喝杯咖啡聊一聊，让他们给你讲讲新手的典型错误有哪些。还有就是要全面深入地阅读文献，历史久远的文献也要读。你可能不相信，二十年前的文献对你也会有很大帮助——很多研究人员过于急功近利，往往没有耐心做基本的功课，结果却发现他们的研究前人早已做过了。没有什么东西可以长久地替代文献阅读，这本书里介绍的简便途径只是用来帮助你更有效地完成任务，而不是帮助你逃避任务。文献和研究方法一样，应该是你的朋友，你掌握的文献越多，你能自信地应付的问题也就越多。
+聪明的外行
+:   你的另一类敌人就是那些聪明的外行。如果一个问题只需要一些基本常识就能解决，你就不应该把时间浪费在这个问题上。这也就是为什么文献中与直觉相反的结论特别有用的道理。
 
-**聪明的外行**
-
-你的另一类敌人就是那些聪明的外行。如果一个问题只需要一些基本常识就能解决，你就不应该把时间浪费在这个问题上。这也就是为什么文献中与直觉相反的结论特别有用的道理。
-
-**空话连篇的推销员与自封的天才**
-
-你的其他潜在的敌人还可能包括空话连篇的推销员以及自封的天才，这两类人都喜欢兜售自己的“万灵药”。声称自己解决了所有领域内的专家（意味着读者也包括在内）都困惑不解的问题，这不会让读者对你有什么好印象。
+空话连篇的推销员与自封的天才
+:   你的其他潜在的敌人还可能包括空话连篇的推销员以及自封的天才，这两类人都喜欢兜售自己的“万灵药”。声称自己解决了所有领域内的专家（意味着读者也包括在内）都困惑不解的问题，这不会让读者对你有什么好印象。
 
 ### 不要表现出自己的软弱或迟疑
 
@@ -175,53 +170,46 @@
 
 合适的评论性语言应该是：
 
-**清楚的**
+清楚的
+:   * 清晰，有条理地论证；
+    * 不要离题；
+    * 删除不必要的内容；
+    * 语言应该是在“轻度正式”——不要太难懂，不要太正式，不要有太多术语，而应该是三思后写出来的能让人读懂的文字；
+    * 关键词的意思要前后一致；
+    * 例子要能够说明问题。
 
-* 清晰，有条理地论证；
-* 不要离题；
-* 删除不必要的内容；
-* 语言应该是在“轻度正式”——不要太难懂，不要太正式，不要有太多术语，而应该是三思后写出来的能让人读懂的文字；
-* 关键词的意思要前后一致；
-* 例子要能够说明问题。
+诚实的
+:   * 从数据推导出结论的过程要严密；
+    * 要考虑到其他说明；
+    * 要承认局眼性。
 
-**诚实的**
+中立的
+:   * 问题的提出形式要中立；
+    * 在研究和成稿时都要主动避免偏见；
+    * 避免使用带感情色彩的语言。
 
-* 从数据推导出结论的过程要严密；
-* 要考虑到其他说明；
-* 要承认局眼性。
+权威的
+:   * 熟练使用文献；
+    * 没有含糊不清的语句；
+    * 优先荻得可靠性；
+    * 内容涵盖的范围合理；
+    * 准确恰当地使用术语。
 
-**中立的**
+充分论证的
+:   * 决定或假设都必须是有理由的，并对其做出解释；
+    * 不存在任何未经论证的断言；
+    * 将数据与结果、讨论和结论区分开来。
 
-* 问题的提出形式要中立；
-* 在研究和成稿时都要主动避免偏见；
-* 避免使用带感情色彩的语言。
+批判性的
+:   * 将论文与现有文献的联系体现出来；
+    * 能够将论文中涉及的各种学术思想组织在一个框架之下；
+    * 指出现有知识体系中的漏洞和缺陷；
+    * 在报告的同时加入智力内容。
 
-**权威的**
-
-* 熟练使用文献；
-* 没有含糊不清的语句；
-* 优先荻得可靠性；
-* 内容涵盖的范围合理；
-* 准确恰当地使用术语。
-
-**充分论证的**
-
-* 决定或假设都必须是有理由的，并对其做出解释；
-* 不存在任何未经论证的断言；
-* 将数据与结果、讨论和结论区分开来。
-
-**批判性的**
-
-* 将论文与现有文献的联系体现出来；
-* 能够将论文中涉及的各种学术思想组织在一个框架之下；
-* 指出现有知识体系中的漏洞和缺陷；
-* 在报告的同时加入智力内容。
-
-**还应强调什么？**
-
-* 指出结论蕴含的意义；
-* 指出重要性和意义；
-* 指出未来的研究方向和计划。
+还应强调什么？
+:   * 指出结论蕴含的意义；
+    * 指出重要性和意义；
+    * 指出未来的研究方向和计划。
 
 ## 读出字面背后的意思
 评审人非常善于读出你论文字面背后的意思，所以你应该避免那些会向评审人泄露不利于你的信息的语句。一些好的、差的和模棱两可的写作的例子见表\@ref(tab:alt-msg)。
