--- a/11.Rmd
+++ b/11.Rmd
@@ -12,95 +12,95 @@
 
 ### 删除离题的内容
 
-* 鞋盒子
-: 把多余的文字片断和其他的想法都放到一个安全的地方（如鞋盒）保存起来，将来可能用得上。但在你写论文时不要被它们分散注意力。
+鞋盒子
+:   把多余的文字片断和其他的想法都放到一个安全的地方（如鞋盒）保存起来，将来可能用得上。但在你写论文时不要被它们分散注意力。
 
-* 在完整的第一稿出来之前不要修改
+在完整的第一稿出来之前不要修改
 
-: 一段文字写得再好，脱离了全文就没什么用了——应该先把第一稿写出来，再开始以完美主义为宗旨的修改润色过程。
+:   一段文字写得再好，脱离了全文就没什么用了——应该先把第一稿写出来，再开始以完美主义为宗旨的修改润色过程。
 
-* 削尖你的铅笔
-: 写作者和网球运动员一样，往往有自己的一套“仪式”来帮助他们对付手头的任务。关键在于，仪式要有时间限制和固定的形式，否则它反而会分散作者的注意力。所以，打个比方来说，你可以首先削尖三支铅笔，再清理书桌，然后开始写论文。
+削尖你的铅笔
+:   写作者和网球运动员一样，往往有自己的一套“仪式”来帮助他们对付手头的任务。关键在于，仪式要有时间限制和固定的形式，否则它反而会分散作者的注意力。所以，打个比方来说，你可以首先削尖三支铅笔，再清理书桌，然后开始写论文。
 
 ### 着手写作
 
-* 找一个朋友谈谈
-: 找一个聪明的朋友，告诉他你要写的“故事”。把你说的话，包括你对朋友提问的回答录音下来。如果你一下子找不到合适的听众，可以想象一个，然后对着录音机说。
+找一个朋友谈谈
+:   找一个聪明的朋友，告诉他你要写的“故事”。把你说的话，包括你对朋友提问的回答录音下来。如果你一下子找不到合适的听众，可以想象一个，然后对着录音机说。
 
-* 先写“错”的
-: 有很多写作诀窍都用到了一个原理，那就是尽可能早地写出初稿，这样你的任务就变成了重写或在原来基础上做改动。先写点肯定不是你想要的东西可以作为你反对或修改的对象——这往往比从无到有的创造来得简单。
+先写“错”的
+:   有很多写作诀窍都用到了一个原理，那就是尽可能早地写出初稿，这样你的任务就变成了重写或在原来基础上做改动。先写点肯定不是你想要的东西可以作为你反对或修改的对象——这往往比从无到有的创造来得简单。
 
-* 提间——回答
-: 可以和你的朋友，也可以单独进行一个提问一回答的练习。可以先由“论文的主题是什么？”开始问，以后每个问题都接着上一个问题的回答，多问一些“为什么”和“怎么样”类型的问题。
+提问——回答
+:   可以和你的朋友，也可以单独进行一个提问一回答的练习。可以先由“论文的主题是什么？”开始问，以后每个问题都接着上一个问题的回答，多问一些“为什么”和“怎么样”类型的问题。
 
-* 誉写员
-: 让别人来扮演“誉写员”的角色，以你向他讲述的东西为基础写出一篇文章。誉写员可能很称职，也可能记录得不够准确，无论如何，他都给你提供了可以加以修改的材料。
+誉写员
+:   让别人来扮演“誉写员”的角色，以你向他讲述的东西为基础写出一篇文章。誉写员可能很称职，也可能记录得不够准确，无论如何，他都给你提供了可以加以修改的材料。
 
-* 抛弃前半小时写的东西
-: 向自己保证．你会抛弃在前半小时写的任何东西。这意味着你可以在前半小时写一堆垃圾、一封给你母亲的信，或者对你心目中蓝图的描述－任何东西，只要是文字。关键是要开始组织句子和段落，而不关心质蜇如何。（如果写得好，你当然可以保留，写得不好，你保证过会儿扔掉它。）
+抛弃前半小时写的东西
+:   向自己保证．你会抛弃在前半小时写的任何东西。这意味着你可以在前半小时写一堆垃圾、一封给你母亲的信，或者对你心目中蓝图的描述－任何东西，只要是文字。关键是要开始组织句子和段落，而不关心质蜇如何。（如果写得好，你当然可以保留，写得不好，你保证过会儿扔掉它。）
 
-* 开始就是简单的打字
-: 有时候，逐渐启动身体各个系统也会对写作有帮助——比如，在开始时你要做的仅仅是敲击键盘，打出什么都行，目的只是为了让自已在键盘前调整到合适的坐姿，让自己的手指活动起来，接着你可以敲一点陈词滥洞到屏幕上，使从头脑到手指传输词句的通道流畅起来，然后再开始写文章。
+开始就是简单的打字
+:   有时候，逐渐启动身体各个系统也会对写作有帮助——比如，在开始时你要做的仅仅是敲击键盘，打出什么都行，目的只是为了让自已在键盘前调整到合适的坐姿，让自己的手指活动起来，接着你可以敲一点陈词滥洞到屏幕上，使从头脑到手指传输词句的通道流畅起来，然后再开始写文章。
 
-* 别从开头开始写
-: 跳过引言部分，从最熟悉的或最易于表达的材料开始写。你也可以选择从最有挑战性的材料入手。
+别从开头开始写
+:   跳过引言部分，从最熟悉的或最易于表达的材料开始写。你也可以选择从最有挑战性的材料入手。
 
-* 高强度写作
-: 制定一个目标，然后和你的一个朋友合作，共同在规定时间内完成高强度的写作任务。
+高强度写作
+:   制定一个目标，然后和你的一个朋友合作，共同在规定时间内完成高强度的写作任务。
 
 ### 使自己感到惊讶
 
-* 改变模式
-: 有时候仅仅改变作品的外观（比如字体大小、格式）或写作类型（比如把学术论文改变成儿童读物）或模式（比如用图来代替文字）或媒介（比如用纸张来代替电脑），就可以让写作素材看上去“焕然一新”或显露出某些与原先不同的地方。
+改变模式
+:   有时候仅仅改变作品的外观（比如字体大小、格式）或写作类型（比如把学术论文改变成儿童读物）或模式（比如用图来代替文字）或媒介（比如用纸张来代替电脑），就可以让写作素材看上去“焕然一新”或显露出某些与原先不同的地方。
 
-* 写瓢虫版本
-: 瓢虫系列是儿童读物类的出版物，其语言简单易懂。概括出你论文的核心内容，然后用很简单的语言把它写出来。
+写瓢虫版本
+:   瓢虫系列是儿童读物类的出版物，其语言简单易懂。概括出你论文的核心内容，然后用很简单的语言把它写出来。
 
-* 情景串联图板
-: 学习制作电影的方式，将论文的陈述画成一连串的情景图，一幅图代表一个关键的陈述，用图形来代替文字。你甚至可以看图说话，把图中的情景演绎出来。你可能会觉得很做作，但这样做的确会对你有所启发。
+情景串联图板
+:   学习制作电影的方式，将论文的陈述画成一连串的情景图，一幅图代表一个关键的陈述，用图形来代替文字。你甚至可以看图说话，把图中的情景演绎出来。你可能会觉得很做作，但这样做的确会对你有所启发。
 
 ### 整理思路
 
-* 检索卡片
-: 在每张检索卡片上写上一个关键点，然后把它们铺在地上，调整它们彼此的相对位置来说明各个关键点的类别以及它们之间的关系。
+检索卡片
+:   在每张检索卡片上写上一个关键点，然后把它们铺在地上，调整它们彼此的相对位置来说明各个关键点的类别以及它们之间的关系。
 
-* 思维导图
-: 用思维导图引导自己产生想法，并整理出各个想法之间的关系。用一张尺寸足够大的纸或者电脑软件来画这张思维导图。
+思维导图
+:   用思维导图引导自己产生想法，并整理出各个想法之间的关系。用一张尺寸足够大的纸或者电脑软件来画这张思维导图。
 
 ### 找到重点
 
-* 回想你的GOST
-: 在你考虑细节前，先回想一下，对你来说，“事情的伟大全局”是什么。
+回想你的GOST
+:   在你考虑细节前，先回想一下，对你来说，“事情的伟大全局”是什么。
 
-* 找到一种模型
-: 找到和你要写的论文功能相似（比如都是展示研究成果）的一篇论文或一个章节。分析它的优点何在，它的内容、结构、特点是什么。从中得出一个模板，然后用你自己的材料来填充这个模板。
+找到一种模型
+:   找到和你要写的论文功能相似（比如都是展示研究成果）的一篇论文或一个章节。分析它的优点何在，它的内容、结构、特点是什么。从中得出一个模板，然后用你自己的材料来填充这个模板。
 
-* 逆向工作
-: 开始时先想象你想要得到的结果：想象写完了的论文，或写完了的一个章节（可以让模板来帮助你，参考上面一段）。然后以这个完成了的作品为起点逆向思考，找出它的主要组成部分，再找到构成这些主要部分的关键环节，直到你找到写作的出发点为止。
+逆向工作
+:   开始时先想象你想要得到的结果：想象写完了的论文，或写完了的一个章节（可以让模板来帮助你，参考上面一段）。然后以这个完成了的作品为起点逆向思考，找出它的主要组成部分，再找到构成这些主要部分的关键环节，直到你找到写作的出发点为止。
 
-* 标题
-: 在写文章之前先把标题列出来。这样做可以使你在脑子形成一个论文的总框架，使你从一开始就可以有条理地展开写作，而不被细节性的问题纠缠。
+标题
+:   在写文章之前先把标题列出来。这样做可以使你在脑子形成一个论文的总框架，使你从一开始就可以有条理地展开写作，而不被细节性的问题纠缠。
 
 ### 完善你的想法
 
-* 把问题反过来提
-: 把你的关键想法反过来或换个方向陈述。如果你正在考虑：“女权主义是否会降低吸烟率？”你可以反过来考虑：“吸烟是否会抑制女权主义的发展？”
+把问题反过来提
+:   把你的关键想法反过来或换个方向陈述。如果你正在考虑：“女权主义是否会降低吸烟率？”你可以反过来考虑：“吸烟是否会抑制女权主义的发展？”
 
 ### 大声读
 
-* 它起什么作用？
-: 写出每个部分（或段落）在全文中扮演的角色（比如在这里我引出了论文的中心思想；在这里我概括了与我的理论对立的其他主要理论；在这里我给出了使用我这种研究方法的先例）。
+它起什么作用？
+:   写出每个部分（或段落）在全文中扮演的角色（比如在这里我引出了论文的中心思想；在这里我概括了与我的理论对立的其他主要理论；在这里我给出了使用我这种研究方法的先例）。
 
-* 寻找陷阱和隐患
-: 在你修改稿子的时候，要考虑读者可能在哪些方面提出批评（比如你的观点是否有根据？术语使用是否前后一致？你在承认研究局限性的同时是否牺牲了研究结论的可靠性？你的图表是使论证更加清晰还是反而使它更难读懂？）。
+寻找陷阱和隐患
+:   在你修改稿子的时候，要考虑读者可能在哪些方面提出批评（比如你的观点是否有根据？术语使用是否前后一致？你在承认研究局限性的同时是否牺牲了研究结论的可靠性？你的图表是使论证更加清晰还是反而使它更难读懂？）。
 
 ### 继续写下去
 
-* 曲奇饼
-: 给自己一些小奖励（比如把曲奇饼摆放在附近，允许自己每写完一部分就吃一块；每写一星期就允许自己玩一天）。
+曲奇饼
+:   给自己一些小奖励（比如把曲奇饼摆放在附近，允许自己每写完一部分就吃一块；每写一星期就允许自己玩一天）。
 
-* 进程表
-: 把每部分的标题写在一张表格里，写完一部分就在表格相应的单元格里填入字数和写作时间。每天统计一次字数。
+进程表
+:   把每部分的标题写在一张表格里，写完一部分就在表格相应的单元格里填入字数和写作时间。每天统计一次字数。
 
 ## 写作过程中的绊脚石
 
