Fix some OCR issues

--- a/append.Rmd
+++ b/append.Rmd
@@ -2,7 +2,7 @@
 
 以下可能不包括那些我们认为是理所应当的重要建议，但这些建议是我们最喜欢的好建议：
 
-1. 你是75%的项目申请书、论文和工作申请都将会遭到拒绝，请做好心理准备。
+1. 你75%的项目申请书、论文和工作申请都将会遭到拒绝，请做好心理准备。
 :   如果你一直是是100%成功的话，这说明你的目标设定得太低。是75%的被拒绝率证明你的标准定得大致合理。（当然是75%这个比例并不能适用于所有的学科，但是其道理是通用的。）
 
 1. 从目标出发。
@@ -120,7 +120,7 @@ Tacit knowledge
 :   隐性知识。总体讲是指那些常常不被明确提起的知识，或者是大家都习以为常的，或者是有关一些敏感话题。很多专业技术是包含大量隐性知识的，掌握这些隐性知识是攻读博士学位的一个重要组成部分。这些知识通常在博士生的课程和书本中是学不到的，而被留给导师来传授的。
 
 There is a literature on that
-:   这是一种略带贬义的评价，意思是，这个题目已经有很多人研究过了。显然，你没有很好地完成家庭作业，论题的挖掘也不够深入。你花费了大蜇的时间来重蹈前人的老路。
+:   这是一种略带贬义的评价，意思是，这个题目已经有很多人研究过了。显然，你没有很好地完成家庭作业，论题的挖掘也不够深入。你花费了大量的时间来重蹈前人的老路。
 
 Viva
 :   拉丁文“论文答辩”的缩写。通常是由答辩人自己导师以外的评审老师参加的现场问答，以考察你对所选题目相关知识的掌握程度。论文答辩是攻读博士的最后一关，有的时候也会用于硕士和本科生教育。在有些国家，答辩通常是向公众开放的，任何人只要有兴趣，都可以去学术报告厅旁听论文答辩。
